@@ -45,10 +45,10 @@ compilation of dftables.c, in which case the macro DFTABLES is defined. */
 
 
 #ifndef DFTABLES
-  #ifdef HAVE_CONFIG_H                         
-  #include <config.h>
-  #endif                                                               
-  #include "pcre_internal.h"
+#  ifdef HAVE_CONFIG_H
+#  include <config.h>
+#  endif
+#  include "pcre_internal.h"
 #endif
 
 
