@@ -33,9 +33,9 @@
 //
 // TODO: Test extractions for PartialMatch/Consume
 
-#ifdef HAVE_CONFIG_H                         
+#ifdef HAVE_CONFIG_H
 #include <config.h>
-#endif                                                               
+#endif
 
 #include <stdio.h>
 #include <cassert>
